--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,75 @@
 ###############################################################################
 # CMake build rules for Fast DDS Monitor
 ###############################################################################
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.5)
+cmake_policy(VERSION 3.5...3.13)
 
-# file(READ version.pri FASTDDSMONITORVERSION)
+###############################################################################
+# Version
+###############################################################################
+set(PRODUCT_MAJOR_VERSION 0)
+set(PRODUCT_MINOR_VERSION 1)
+set(PRODUCT_PATCH_VERSION 0)
+set(PRODUCT_VERSION_STR ${PRODUCT_MAJOR_VERSION}.${PRODUCT_MINOR_VERSION}.${PRODUCT_PATCH_VERSION})
 
-set(IS_TOP_LEVEL TRUE)
-if(PROJECT_SOURCE_DIR)
-    set(IS_TOP_LEVEL FALSE)
+###############################################################################
+# Project
+###############################################################################
+project(fastdds-monitor)
+set(PROJECT_VERSION_MAJOR "${PRODUCT_MAJOR_VERSION}")
+set(PROJECT_VERSION_MINOR "${PRODUCT_MINOR_VERSION}")
+set(PROJECT_VERSION_PATCH "${PRODUCT_PATCH_VERSION}")
+set(PROJECT_VERSION "${PRODUCT_VERSION_STR}")
+
+set(PROJECT_NAME_LARGE "Fast DDS Monitor")
+string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
+set(${PROJECT_NAME}_DESCRIPTION_SUMMARY "Qt application to display and interact with the Fast DDS statistics module data")
+set(${PROJECT_NAME}_DESCRIPTION
+    "eProsima ${PROJECT_NAME_LARGE} provides a simple and easy-to-use user application for interacting with data from Fast DDS statistics module")
+
+message(STATUS "Configuring ${PROJECT_NAME_LARGE}")
+message(STATUS "Version: ${PROJECT_VERSION}")
+
+###############################################################################
+# Load external projects
+###############################################################################
+find_package(Qt5 5.15 COMPONENTS Core Widgets Gui Qml Quick Charts REQUIRED)
+find_package(fastcdr REQUIRED)
+find_package(fastrtps REQUIRED)
+find_package(fastdds-statistics-backend REQUIRED)
+
+foreach(c Core Widgets Gui Quick Qml Charts)
+    if(${Qt5${c}_FOUND})
+        message(STATUS "Qt5${c} found! Version ${Qt5${c}_VERSION}")
+    endif()
+endforeach()
+
+if(${fastcdr_FOUND})
+    message(STATUS "Fast CDR found!")
+endif()
+if(${fastrtps_FOUND})
+    message(STATUS "Fast DDS found!")
+endif()
+if(${fastdds-statistics-backend_FOUND})
+    message(STATUS "Fast DDS Statistics Backend found!")
 endif()
 
-# Set CMAKE_BUILD_TYPE to Release by default.
-if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-    message(STATUS "Setting build type to 'Release' as none was specified.")
-    set(CMAKE_BUILD_TYPE Release CACHE STRING
-        "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
-        FORCE)
-    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+###############################################################################
+# Compile Fast DDS Statistics Backend Mock for testing purposes
+###############################################################################
+option(BUILD_MOCK "Build Fast DDS Monitor Mock library to simulate Fast DDS Statistics Backend" ON)
+
+if(BUILD_MOCK)
+    message(STATUS "Compiling MOCKs")
+    add_subdirectory(mock)
 endif()
 
-project(fastdds-monitor LANGUAGES CXX)
-
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
-#set(CMAKE_CXX_STANDARD 11)
-#set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(FORCE_CXX "14" CACHE STRING "C++ standard fulfillment selection")
-
-message(STATUS "Configuring ${PROJECT_NAME}")
+###############################################################################
+# Set C++14 as the C++ standard required to build the project
+###############################################################################
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 ###############################################################################
 # Warning level
@@ -43,32 +81,17 @@ if(MSVC OR MSVC_IDE)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
     endif()
 else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -Wno-unknown-pragmas")
+    set(CMAKE_CXX_FLAGS
+        "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -Wno-unknown-pragmas -Wno-error=deprecated-declarations")
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-psabi")
+        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--no-undefined")
+    elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-undefined,error")
+    endif()
 endif()
 
-###############################################################################
-# GCC colors if using CCache
-###############################################################################
-if("${CMAKE_CXX_COMPILER_LAUNCHER}" STREQUAL "ccache" AND
-        CMAKE_COMPILER_IS_GNUCXX AND
-        CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4,8)
-    add_compile_options(-fdiagnostics-color=always)
-endif()
-
-###############################################################################
-# Test system configuration
-###############################################################################
-include(${PROJECT_SOURCE_DIR}/cmake/common/check_configuration.cmake)
-check_stdcxx()
-check_compile_feature()
-check_endianness()
-
-###############################################################################
-# Check MSVC architecture
-###############################################################################
-if(MSVC OR MSVC_IDE)
-    check_msvc_arch()
-endif()
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
 ###############################################################################
 # Installation paths
@@ -77,93 +100,96 @@ set(BIN_INSTALL_DIR bin/ CACHE PATH "Installation directory for binaries")
 set(INCLUDE_INSTALL_DIR include/ CACHE PATH "Installation directory for C++ headers")
 set(LIB_INSTALL_DIR lib${LIB_SUFFIX}/ CACHE PATH "Installation directory for libraries")
 set(DATA_INSTALL_DIR share/ CACHE PATH "Installation directory for data")
-if(WIN32 AND EPROSIMA_INSTALLER AND IS_TOP_LEVEL)
+if(WIN32)
     set(LICENSE_INSTALL_DIR . CACHE PATH "Installation directory for licenses")
 else()
     set(LICENSE_INSTALL_DIR ${DATA_INSTALL_DIR}/${PROJECT_NAME} CACHE PATH "Installation directory for licenses")
 endif()
 
-###############################################################################
-# Load external eProsima projects.
-###############################################################################
-find_package(fastcdr REQUIRED)
-find_package(fastrtps REQUIRED)
-find_package(fastdds-statistics-backend REQUIRED)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
 
 ###############################################################################
-# Compile
+# Configure Qt project
 ###############################################################################
-include_directories(include/)
+# Include the Qt5Widgets and QtQml header files for the Qt Framework and QML functions.
+include_directories(${Qt5Widgets_INCLUDE_DIRS} ${QtQml_INCLUDE_DIRS})
+# Specify the needed Qt definitions
+add_definitions(${Qt5Widgets_DEFINITIONS} ${QtQml_DEFINITIONS} ${${Qt5Quick_DEFINITIONS}})
 
-find_package(Qt5 REQUIRED COMPONENTS Widgets Core Gui Quick Charts)
-#find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick REQUIRED)
-#find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick REQUIRED)
+# Set the qml.qrc file containing the QML and other resources of the application
+qt5_add_resources(QT_RESOURCES qml.qrc)
 
-message(STATUS "Configuring Fast DDS Monitor...")
+# Additional compilation steps required by a Qt program
+# User Interface Compiler (UIC)
+set(CMAKE_AUTOUIC ON)
+# Meta-Object Compiler (MOC)
+set(CMAKE_AUTOMOC ON)
+# Resource Compiler (RCC)
+set(CMAKE_AUTORCC ON)
+
+###############################################################################
+# Compile program
+###############################################################################
+set(PROJECT_HEADERS
+    include/backend/backend_types.h
+    include/backend/backend_utils.h
+    include/backend/Callback.h
+    include/backend/Listener.h
+    include/backend/SyncBackendConnection.h
+    include/CallbackListener.h
+    include/Controller.h
+    include/Engine.h
+    include/model/dds/EndpointModelItem.h
+    include/model/dds/LocatorModelItem.h
+    include/model/dds/ParticipantModelItem.h
+    include/model/EntityContainerModelItem.h
+    include/model/EntityItem.h
+    include/model/ListItem.h
+    include/model/ListModel.h
+    include/model/logical/DomainModelItem.h
+    include/model/logical/TopicModelItem.h
+    include/model/model_types.h
+    include/model/physical/HostModelItem.h
+    include/model/physical/ProcessModelItem.h
+    include/model/physical/UserModelItem.h
+    include/model/SubListedListItem.h
+    include/model/SubListedListModel.h
+    include/model/tree/TreeItem.h
+    include/model/tree/TreeModel.h
+    include/statistics/StatisticsData.h
+    include/utils.h
+    json.hpp
+)
 set(PROJECT_SOURCES
-        src/statistics/StatisticsData.cpp
-        src/Controller.cpp
-        src/backend/AsyncBackendConnection.cpp
-        src/backend/SyncBackendConnection.cpp
-        src/backend/backend_utils.cpp
-        src/model/dds/ParticipantModelItem.cpp
-        src/model/dds/EndpointModelItem.cpp
-        src/model/logical/TopicModelItem.cpp
-        src/model/physical/ProcessModelItem.cpp
-        src/model/EntityItem.cpp
-        src/model/ListItem.cpp
-        src/model/ListModel.cpp
-        src/model/SubListedListModel.cpp
-        src/model/tree/TreeItem.cpp
-        src/model/tree/TreeModel.cpp
-        src/main.cpp
-        src/utils.cpp
-        src/Engine.cpp
-        qml.qrc
+    src/backend/backend_utils.cpp
+    src/backend/Listener.cpp
+    src/backend/SyncBackendConnection.cpp
+    src/CallbackListener.cpp
+    src/Controller.cpp
+    src/Engine.cpp
+    src/main.cpp
+    src/model/dds/EndpointModelItem.cpp
+    src/model/dds/ParticipantModelItem.cpp
+    src/model/EntityItem.cpp
+    src/model/ListItem.cpp
+    src/model/ListModel.cpp
+    src/model/logical/TopicModelItem.cpp
+    src/model/physical/ProcessModelItem.cpp
+    src/model/SubListedListModel.cpp
+    src/model/tree/TreeItem.cpp
+    src/model/tree/TreeModel.cpp
+    src/statistics/StatisticsData.cpp
+    src/utils.cpp
 )
 
-# if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-#     qt_add_executable(${PROJECT_NAME}
-#         ${PROJECT_SOURCES}
-#     )
-# else()
-#     if(ANDROID)
-#         add_library(${PROJECT_NAME} SHARED
-#             ${PROJECT_SOURCES}
-#         )
-#     else()
-#         add_executable(${PROJECT_NAME}
-#           ${PROJECT_SOURCES}
-#         )
-#     endif()
-# endif()
-
-# TODO fix link error
-# if(ANDROID)
-#     add_library(${PROJECT_NAME} SHARED
-#         ${PROJECT_SOURCES}
-#     )
-# else()
-#     add_executable(${PROJECT_NAME}
-#         ${PROJECT_SOURCES}
-#     )
-# endif()
-
-# target_compile_definitions(${PROJECT_NAME}
-#   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-# target_link_libraries(${PROJECT_NAME}
-#   #PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick
-#   Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Quick Qt5::Charts
-#   fastdds-statistics-backend)
-
-###############################################################################
-# Compile MOCK
-###############################################################################
-# Only one of the mocks could be built. If both set, complex mock would be built
-option(COMPLEX_MOCK "Build Fast DDS Monitor Complex Mock library to simulate Fast DDS Statistics Backend" OFF)
-option(STATIC_MOCK "Build Fast DDS Monitor Static Mock library to simulate Fast DDS Statistics Backend" OFF)
-
-if(STATIC_MOCK OR COMPLEX_MOCK)
-    message(STATUS "Compiling MOCK")
-    add_subdirectory(mock)
-endif()
+add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS} ${QT_RESOURCES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(${PROJECT_NAME}
+    Qt5::Core
+    Qt5::Widgets
+    Qt5::Gui
+    Qt5::Qml
+    Qt5::Quick
+    Qt5::Charts
+    complex-mock)
