--- a/mock/complex_mock/CMakeLists.txt
+++ b/mock/complex_mock/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2016 Proyectos y Sistemas de Mantenimiento SL (eProsima).
+# Copyright 2021 Proyectos y Sistemas de Mantenimiento SL (eProsima).
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,11 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cmake_minimum_required(VERSION 2.8.12)
-
-if(NOT CMAKE_VERSION VERSION_LESS 3.0)
-    cmake_policy(SET CMP0048 NEW)
-endif()
+cmake_minimum_required(VERSION 3.14)
 
 # Find FastDDS Statistics Backend library
 find_package(fastcdr REQUIRED)
@@ -26,9 +22,9 @@ find_package(fastdds-statistics-backend REQUIRED)
 # Allow to use threads
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-project(complex-mock)
+project(backend-mock)
 
-set(STATIC_MOCK_COMPLEX_SOURCE
+set(COMPLEX_MOCK_SOURCE
 
     StatisticsBackend.cpp
     EntityId.cpp
@@ -48,13 +44,12 @@ set(STATIC_MOCK_COMPLEX_SOURCE
     entities/source/Locator.cpp
     )
 
-add_library(ComplexMock ${STATIC_MOCK_COMPLEX_SOURCE})
+add_library(BackendMock ${COMPLEX_MOCK_SOURCE})
 
-target_compile_definitions(ComplexMock PRIVATE
+target_compile_definitions(BackendMock PRIVATE
     $<$<AND:$<NOT:$<BOOL:${WIN32}>>,$<STREQUAL:"${CMAKE_BUILD_TYPE}","Debug">>:__DEBUG>
-    $<$<BOOL:${INTERNAL_DEBUG}>:__INTERNALDEBUG> # Internal debug activated.
 )
 
-target_link_libraries(ComplexMock fastdds-statistics-backend)
-install(TARGETS ComplexMock
-    RUNTIME DESTINATION Mock/ComplexMock/${BIN_INSTALL_DIR})
+target_link_libraries(BackendMock fastdds-statistics-backend)
+install(TARGETS BackendMock
+    RUNTIME DESTINATION Mock/BackendMock/${BIN_INSTALL_DIR})
