--- a/mock/static_mock/CMakeLists.txt
+++ b/mock/static_mock/CMakeLists.txt
@@ -27,7 +27,7 @@ set(STATIC_MOCK_SOURCE
     EntityId.cpp
     )
 
-add_library(${PROJECT_NAME} ${STATIC_MOCK_COMPLEX_SOURCE})
+add_library(${PROJECT_NAME} ${STATIC_MOCK_SOURCE})
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     $<$<AND:$<NOT:$<BOOL:${WIN32}>>,$<STREQUAL:"${CMAKE_BUILD_TYPE}","Debug">>:__DEBUG>
