--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,3 +221,29 @@ else()
         fastdds-statistics-backend)
 
 endif()
+
+###############################################################################
+# Test
+###############################################################################
+option(BUILD_TESTS "Build Fast DDS Statistics Backend library and documentation tests" OFF)
+option(BUILD_DOCUMENTATION_TESTS "Build Fast DDS Statistics Backend documentation tests" OFF)
+
+if (BUILD_TESTS)
+    set(BUILD_DOCUMENTATION_TESTS ON)
+endif()
+
+if(BUILD_DOCUMENTATION_TESTS)
+    # CTest needs to be included here, otherwise it is not possible to run the tests from the root
+    # of the build directory
+    enable_testing()
+    include(CTest)
+endif()
+
+###############################################################################
+# Documentation
+###############################################################################
+option(BUILD_DOCUMENTATION "Generate documentation" OFF)
+if(BUILD_DOCUMENTATION OR BUILD_DOCUMENTATION_TESTS)
+    set(BUILD_DOCUMENTATION ON)
+    add_subdirectory(docs)
+endif()
