--- a/mock/static_mock/CMakeLists.txt
+++ b/mock/static_mock/CMakeLists.txt
@@ -22,19 +22,17 @@ find_package(fastdds-statistics-backend REQUIRED)
 # Allow to use threads
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-project(backend-mock)
-
 set(STATIC_MOCK_SOURCE
     StatisticsBackend.cpp
     EntityId.cpp
     )
 
-add_library(BackendMock ${STATIC_MOCK_SOURCE})
+add_library(${PROJECT_NAME} ${STATIC_MOCK_SOURCE})
 
-target_compile_definitions(BackendMock PRIVATE
+target_compile_definitions(${PROJECT_NAME} PRIVATE
     $<$<AND:$<NOT:$<BOOL:${WIN32}>>,$<STREQUAL:"${CMAKE_BUILD_TYPE}","Debug">>:__DEBUG>
 )
 
-target_link_libraries(BackendMock fastdds-statistics-backend)
-install(TARGETS BackendMock
-    RUNTIME DESTINATION Mock/BackendMock/${BIN_INSTALL_DIR})
+target_link_libraries(${PROJECT_NAME} fastdds-statistics-backend)
+install(TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION Mock/${PROJECT_NAME}/${BIN_INSTALL_DIR})
